Add specific .config

--- a/.config
+++ b/.config
@@ -2,14 +2,14 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm64 6.16.0-rc1 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="gcc (GCC) 15.1.1 20250425"
+CONFIG_CC_VERSION_TEXT="aarch64-linux-gnu-gcc (GCC) 14.2.0"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=150101
+CONFIG_GCC_VERSION=140200
 CONFIG_CLANG_VERSION=0
 CONFIG_AS_IS_GNU=y
-CONFIG_AS_VERSION=24400
+CONFIG_AS_VERSION=24300
 CONFIG_LD_IS_BFD=y
-CONFIG_LD_VERSION=24400
+CONFIG_LD_VERSION=24300
 CONFIG_LLD_VERSION=0
 CONFIG_RUSTC_VERSION=0
 CONFIG_RUSTC_LLVM_VERSION=0
@@ -19,8 +19,6 @@ CONFIG_CC_HAS_ASM_GOTO_TIED_OUTPUT=y
 CONFIG_TOOLS_SUPPORT_RELR=y
 CONFIG_CC_HAS_ASM_INLINE=y
 CONFIG_CC_HAS_NO_PROFILE_FN_ATTR=y
-CONFIG_CC_HAS_COUNTED_BY=y
-CONFIG_CC_HAS_MULTIDIMENSIONAL_NONSTRING=y
 CONFIG_LD_CAN_USE_KEEP_IN_OVERLAY=y
 CONFIG_PAHOLE_VERSION=130
 CONFIG_IRQ_WORK=y
@@ -314,7 +312,6 @@ CONFIG_FIX_EARLYCON_MEM=y
 CONFIG_PGTABLE_LEVELS=5
 CONFIG_ARCH_SUPPORTS_UPROBES=y
 CONFIG_ARCH_PROC_KCORE_TEXT=y
-CONFIG_BROKEN_GAS_INST=y
 CONFIG_BUILTIN_RETURN_ADDRESS_STRIPS_PAC=y
 
 #
@@ -327,7 +324,7 @@ CONFIG_ARCH_ACTIONS=y
 # CONFIG_ARCH_APPLE is not set
 # CONFIG_ARCH_BCM is not set
 # CONFIG_ARCH_BERLIN is not set
-# CONFIG_ARCH_BITMAIN is not set
+CONFIG_ARCH_BITMAIN=y
 # CONFIG_ARCH_BLAIZE is not set
 # CONFIG_ARCH_EXYNOS is not set
 # CONFIG_ARCH_SPARX5 is not set
@@ -352,10 +349,10 @@ CONFIG_ARCH_QCOM=y
 # CONFIG_ARCH_SYNQUACER is not set
 # CONFIG_ARCH_TEGRA is not set
 # CONFIG_ARCH_SPRD is not set
-CONFIG_ARCH_THUNDER=y
+# CONFIG_ARCH_THUNDER is not set
 # CONFIG_ARCH_THUNDER2 is not set
 # CONFIG_ARCH_UNIPHIER is not set
-# CONFIG_ARCH_VEXPRESS is not set
+CONFIG_ARCH_VEXPRESS=y
 # CONFIG_ARCH_VISCONTI is not set
 # CONFIG_ARCH_XGENE is not set
 # CONFIG_ARCH_ZYNQMP is not set
@@ -418,10 +415,10 @@ CONFIG_QCOM_FALKOR_ERRATUM_1003=y
 CONFIG_QCOM_FALKOR_ERRATUM_1009=y
 CONFIG_QCOM_QDF2400_ERRATUM_0065=y
 CONFIG_QCOM_FALKOR_ERRATUM_E1041=y
-# CONFIG_NVIDIA_CARMEL_CNP_ERRATUM is not set
-# CONFIG_ROCKCHIP_ERRATUM_3568002 is not set
-# CONFIG_ROCKCHIP_ERRATUM_3588001 is not set
-# CONFIG_SOCIONEXT_SYNQUACER_PREITS is not set
+CONFIG_NVIDIA_CARMEL_CNP_ERRATUM=y
+CONFIG_ROCKCHIP_ERRATUM_3568002=y
+CONFIG_ROCKCHIP_ERRATUM_3588001=y
+CONFIG_SOCIONEXT_SYNQUACER_PREITS=y
 # end of ARM errata workarounds via the alternatives framework
 
 CONFIG_ARM64_4K_PAGES=y
@@ -451,6 +448,7 @@ CONFIG_HZ=250
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
 CONFIG_HW_PERF_EVENTS=y
+CONFIG_CC_HAVE_SHADOW_CALL_STACK=y
 CONFIG_PARAVIRT=y
 # CONFIG_PARAVIRT_TIME_ACCOUNTING is not set
 CONFIG_ARCH_SUPPORTS_KEXEC=y
@@ -499,6 +497,7 @@ CONFIG_ARM64_CNP=y
 #
 CONFIG_ARM64_PTR_AUTH=y
 CONFIG_ARM64_PTR_AUTH_KERNEL=y
+CONFIG_CC_HAS_BRANCH_PROT_PAC_RET=y
 CONFIG_AS_HAS_CFI_NEGATE_RA_STATE=y
 # end of ARMv8.3 architectural features
 
@@ -512,8 +511,12 @@ CONFIG_ARM64_TLB_RANGE=y
 #
 # ARMv8.5 architectural features
 #
+CONFIG_AS_HAS_ARMV8_5=y
 CONFIG_ARM64_BTI=y
+CONFIG_CC_HAS_BRANCH_PROT_PAC_RET_BTI=y
 CONFIG_ARM64_E0PD=y
+CONFIG_ARM64_AS_HAS_MTE=y
+CONFIG_ARM64_MTE=y
 # end of ARMv8.5 architectural features
 
 #
@@ -521,6 +524,8 @@ CONFIG_ARM64_E0PD=y
 #
 CONFIG_ARM64_EPAN=y
 # end of ARMv8.7 architectural features
+
+CONFIG_AS_HAS_MOPS=y
 
 #
 # ARMv8.9 architectural features
@@ -542,6 +547,8 @@ CONFIG_ARM64_SME=y
 CONFIG_RELOCATABLE=y
 CONFIG_RANDOMIZE_BASE=y
 CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
+CONFIG_CC_HAVE_STACKPROTECTOR_SYSREG=y
+CONFIG_STACKPROTECTOR_PER_TASK=y
 CONFIG_ARM64_CONTPTE=y
 # end of Kernel Features
 
@@ -724,6 +731,7 @@ CONFIG_ARCH_HAS_DMA_OPS=y
 #
 # General architecture-dependent options
 #
+CONFIG_ARCH_HAS_SUBPAGE_FAULTS=y
 CONFIG_HOTPLUG_SMT=y
 CONFIG_HOTPLUG_CORE_SYNC=y
 CONFIG_HOTPLUG_CORE_SYNC_DEAD=y
@@ -776,6 +784,8 @@ CONFIG_HAVE_ARCH_STACKLEAK=y
 CONFIG_HAVE_STACKPROTECTOR=y
 CONFIG_STACKPROTECTOR=y
 CONFIG_STACKPROTECTOR_STRONG=y
+CONFIG_ARCH_SUPPORTS_SHADOW_CALL_STACK=y
+# CONFIG_SHADOW_CALL_STACK is not set
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 CONFIG_ARCH_SUPPORTS_LTO_CLANG_THIN=y
 CONFIG_LTO_NONE=y
@@ -1027,7 +1037,6 @@ CONFIG_CMA_AREAS=20
 CONFIG_PAGE_BLOCK_ORDER=10
 CONFIG_GENERIC_EARLY_IOREMAP=y
 # CONFIG_DEFERRED_STRUCT_PAGE_INIT is not set
-CONFIG_PAGE_IDLE_FLAG=y
 # CONFIG_IDLE_PAGE_TRACKING is not set
 CONFIG_ARCH_HAS_CACHE_LINE_SIZE=y
 CONFIG_ARCH_HAS_CURRENT_STACK_POINTER=y
@@ -1037,6 +1046,8 @@ CONFIG_ZONE_DMA32=y
 # CONFIG_ZONE_DEVICE is not set
 CONFIG_ARCH_USES_HIGH_VMA_FLAGS=y
 CONFIG_ARCH_HAS_PKEYS=y
+CONFIG_ARCH_USES_PG_ARCH_2=y
+CONFIG_ARCH_USES_PG_ARCH_3=y
 CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_PERCPU_STATS is not set
 # CONFIG_GUP_TEST is not set
@@ -1058,12 +1069,7 @@ CONFIG_ARCH_HAS_USER_SHADOW_STACK=y
 #
 # Data Access Monitoring
 #
-CONFIG_DAMON=y
-CONFIG_DAMON_VADDR=y
-CONFIG_DAMON_PADDR=y
-CONFIG_DAMON_SYSFS=y
-# CONFIG_DAMON_RECLAIM is not set
-# CONFIG_DAMON_LRU_SORT is not set
+# CONFIG_DAMON is not set
 # end of Data Access Monitoring
 # end of Memory Management options
 
@@ -1921,6 +1927,7 @@ CONFIG_SYSFB=y
 CONFIG_GOOGLE_FIRMWARE=y
 CONFIG_GOOGLE_CBMEM=m
 CONFIG_GOOGLE_COREBOOT_TABLE=m
+# CONFIG_GOOGLE_FRAMEBUFFER_COREBOOT is not set
 # CONFIG_GOOGLE_MEMCONSOLE_COREBOOT is not set
 # CONFIG_GOOGLE_VPD is not set
 
@@ -2225,7 +2232,6 @@ CONFIG_PCI_ENDPOINT_TEST=m
 CONFIG_TPS6594_ESM=m
 CONFIG_TPS6594_PFSM=m
 # CONFIG_NSM is not set
-# CONFIG_MARVELL_CN10K_DPI is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -3527,7 +3533,6 @@ CONFIG_HW_RANDOM=y
 # CONFIG_HW_RANDOM_TIMERIOMEM is not set
 # CONFIG_HW_RANDOM_BA431 is not set
 CONFIG_HW_RANDOM_VIRTIO=y
-CONFIG_HW_RANDOM_CAVIUM=y
 CONFIG_HW_RANDOM_OPTEE=y
 # CONFIG_HW_RANDOM_CCTRNG is not set
 # CONFIG_HW_RANDOM_XIPHERA is not set
@@ -3638,6 +3643,7 @@ CONFIG_I2C_QCOM_GENI=m
 CONFIG_I2C_QUP=y
 CONFIG_I2C_RK3X=y
 # CONFIG_I2C_SIMTEC is not set
+# CONFIG_I2C_VERSATILE is not set
 # CONFIG_I2C_THUNDERX is not set
 # CONFIG_I2C_XILINX is not set
 
@@ -3767,6 +3773,7 @@ CONFIG_GENERIC_PINCONF=y
 # CONFIG_PINCTRL_AMD is not set
 # CONFIG_PINCTRL_AXP209 is not set
 # CONFIG_PINCTRL_AW9523 is not set
+CONFIG_PINCTRL_BM1880=y
 # CONFIG_PINCTRL_CY8C95X0 is not set
 CONFIG_PINCTRL_DA9062=m
 CONFIG_PINCTRL_MAX77620=y
@@ -3784,62 +3791,62 @@ CONFIG_PINCTRL_S700=y
 CONFIG_PINCTRL_S900=y
 # CONFIG_PINCTRL_IMX_SCMI is not set
 CONFIG_PINCTRL_MSM=y
-# CONFIG_PINCTRL_IPQ5018 is not set
-# CONFIG_PINCTRL_IPQ5332 is not set
-# CONFIG_PINCTRL_IPQ5424 is not set
-# CONFIG_PINCTRL_IPQ8074 is not set
-# CONFIG_PINCTRL_IPQ6018 is not set
-# CONFIG_PINCTRL_IPQ9574 is not set
+CONFIG_PINCTRL_IPQ5018=y
+CONFIG_PINCTRL_IPQ5332=y
+CONFIG_PINCTRL_IPQ5424=y
+CONFIG_PINCTRL_IPQ8074=y
+CONFIG_PINCTRL_IPQ6018=y
+CONFIG_PINCTRL_IPQ9574=y
 # CONFIG_PINCTRL_MDM9607 is not set
-# CONFIG_PINCTRL_MSM8916 is not set
+CONFIG_PINCTRL_MSM8916=y
 # CONFIG_PINCTRL_MSM8917 is not set
-# CONFIG_PINCTRL_MSM8953 is not set
-# CONFIG_PINCTRL_MSM8976 is not set
-# CONFIG_PINCTRL_MSM8994 is not set
-# CONFIG_PINCTRL_MSM8996 is not set
-# CONFIG_PINCTRL_MSM8998 is not set
-# CONFIG_PINCTRL_QCM2290 is not set
-# CONFIG_PINCTRL_QCS404 is not set
-# CONFIG_PINCTRL_QCS615 is not set
-# CONFIG_PINCTRL_QCS8300 is not set
-# CONFIG_PINCTRL_QDF2XXX is not set
-# CONFIG_PINCTRL_QDU1000 is not set
-# CONFIG_PINCTRL_SA8775P is not set
+CONFIG_PINCTRL_MSM8953=y
+CONFIG_PINCTRL_MSM8976=y
+CONFIG_PINCTRL_MSM8994=y
+CONFIG_PINCTRL_MSM8996=y
+CONFIG_PINCTRL_MSM8998=y
+CONFIG_PINCTRL_QCM2290=y
+CONFIG_PINCTRL_QCS404=y
+CONFIG_PINCTRL_QCS615=y
+CONFIG_PINCTRL_QCS8300=y
+CONFIG_PINCTRL_QDF2XXX=y
+CONFIG_PINCTRL_QDU1000=y
+CONFIG_PINCTRL_SA8775P=y
 # CONFIG_PINCTRL_SAR2130P is not set
-# CONFIG_PINCTRL_SC7180 is not set
-# CONFIG_PINCTRL_SC7280 is not set
-# CONFIG_PINCTRL_SC8180X is not set
-# CONFIG_PINCTRL_SC8280XP is not set
-# CONFIG_PINCTRL_SDM660 is not set
-# CONFIG_PINCTRL_SDM670 is not set
-# CONFIG_PINCTRL_SDM845 is not set
-# CONFIG_PINCTRL_SDX75 is not set
-# CONFIG_PINCTRL_SM4450 is not set
-# CONFIG_PINCTRL_SM6115 is not set
-# CONFIG_PINCTRL_SM6125 is not set
-# CONFIG_PINCTRL_SM6350 is not set
-# CONFIG_PINCTRL_SM6375 is not set
+CONFIG_PINCTRL_SC7180=y
+CONFIG_PINCTRL_SC7280=y
+CONFIG_PINCTRL_SC8180X=y
+CONFIG_PINCTRL_SC8280XP=y
+CONFIG_PINCTRL_SDM660=y
+CONFIG_PINCTRL_SDM670=y
+CONFIG_PINCTRL_SDM845=y
+CONFIG_PINCTRL_SDX75=y
+CONFIG_PINCTRL_SM4450=y
+CONFIG_PINCTRL_SM6115=y
+CONFIG_PINCTRL_SM6125=y
+CONFIG_PINCTRL_SM6350=y
+CONFIG_PINCTRL_SM6375=y
 # CONFIG_PINCTRL_SM7150 is not set
 CONFIG_PINCTRL_SM8150=y
 CONFIG_PINCTRL_SM8250=y
 CONFIG_PINCTRL_SM8350=y
 CONFIG_PINCTRL_SM8450=y
-# CONFIG_PINCTRL_SM8550 is not set
-# CONFIG_PINCTRL_SM8650 is not set
-# CONFIG_PINCTRL_SM8750 is not set
-# CONFIG_PINCTRL_X1E80100 is not set
+CONFIG_PINCTRL_SM8550=y
+CONFIG_PINCTRL_SM8650=y
+CONFIG_PINCTRL_SM8750=y
+CONFIG_PINCTRL_X1E80100=y
 CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
 # CONFIG_PINCTRL_QCOM_SSBI_PMIC is not set
 CONFIG_PINCTRL_LPASS_LPI=m
-# CONFIG_PINCTRL_SC7280_LPASS_LPI is not set
+CONFIG_PINCTRL_SC7280_LPASS_LPI=m
 # CONFIG_PINCTRL_SM4250_LPASS_LPI is not set
-# CONFIG_PINCTRL_SM6115_LPASS_LPI is not set
+CONFIG_PINCTRL_SM6115_LPASS_LPI=m
 CONFIG_PINCTRL_SM8250_LPASS_LPI=m
 CONFIG_PINCTRL_SM8350_LPASS_LPI=m
 CONFIG_PINCTRL_SM8450_LPASS_LPI=m
-# CONFIG_PINCTRL_SC8280XP_LPASS_LPI is not set
-# CONFIG_PINCTRL_SM8550_LPASS_LPI is not set
-# CONFIG_PINCTRL_SM8650_LPASS_LPI is not set
+CONFIG_PINCTRL_SC8280XP_LPASS_LPI=m
+CONFIG_PINCTRL_SM8550_LPASS_LPI=m
+CONFIG_PINCTRL_SM8650_LPASS_LPI=m
 
 #
 # Renesas pinctrl drivers
@@ -3877,7 +3884,6 @@ CONFIG_GPIO_PL061=y
 # CONFIG_GPIO_POLARFIRE_SOC is not set
 # CONFIG_GPIO_SIFIVE is not set
 CONFIG_GPIO_SYSCON=y
-# CONFIG_GPIO_THUNDERX is not set
 CONFIG_GPIO_WCD934X=m
 CONFIG_GPIO_XGENE=y
 # CONFIG_GPIO_XILINX is not set
@@ -4297,7 +4303,6 @@ CONFIG_PM8916_WATCHDOG=m
 # CONFIG_I6300ESB_WDT is not set
 # CONFIG_HP_WATCHDOG is not set
 # CONFIG_NIC7018_WDT is not set
-CONFIG_MARVELL_GTI_WDT=y
 # CONFIG_MEN_A21_WDT is not set
 # CONFIG_XEN_WDT is not set
 
@@ -5421,7 +5426,7 @@ CONFIG_FB_EFI=y
 CONFIG_XEN_FBDEV_FRONTEND=y
 # CONFIG_FB_METRONOME is not set
 # CONFIG_FB_MB862XX is not set
-# CONFIG_FB_SIMPLE is not set
+CONFIG_FB_SIMPLE=y
 # CONFIG_FB_SSD1307 is not set
 # CONFIG_FB_SM712 is not set
 CONFIG_FB_CORE=y
@@ -7056,6 +7061,7 @@ CONFIG_COMMON_CLK_SCPI=y
 # CONFIG_COMMON_CLK_SI514 is not set
 # CONFIG_COMMON_CLK_SI544 is not set
 # CONFIG_COMMON_CLK_SI570 is not set
+CONFIG_COMMON_CLK_BM1880=y
 # CONFIG_COMMON_CLK_CDCE706 is not set
 # CONFIG_COMMON_CLK_CDCE925 is not set
 CONFIG_COMMON_CLK_CS2000_CP=y
@@ -8126,6 +8132,7 @@ CONFIG_RESET_GPIO=m
 CONFIG_RESET_QCOM_AOSS=y
 CONFIG_RESET_QCOM_PDC=m
 CONFIG_RESET_SCMI=y
+CONFIG_RESET_SIMPLE=y
 # CONFIG_RESET_TI_SYSCON is not set
 # CONFIG_RESET_TI_TPS380X is not set
 
@@ -8202,17 +8209,14 @@ CONFIG_QCOM_L2_PMU=y
 CONFIG_QCOM_L3_PMU=y
 CONFIG_ARM_SPE_PMU=m
 CONFIG_ARM_DMC620_PMU=m
-# CONFIG_MARVELL_CN10K_TAD_PMU is not set
 # CONFIG_ALIBABA_UNCORE_DRW_PMU is not set
 CONFIG_HISI_PMU=y
 # CONFIG_HISI_PCIE_PMU is not set
 # CONFIG_HNS3_PMU is not set
-# CONFIG_MARVELL_CN10K_DDR_PMU is not set
 # CONFIG_DWC_PCIE_PMU is not set
 CONFIG_ARM_CORESIGHT_PMU_ARCH_SYSTEM_PMU=m
 CONFIG_NVIDIA_CORESIGHT_PMU_ARCH_SYSTEM_PMU=m
 # CONFIG_AMPERE_CORESIGHT_PMU_ARCH_SYSTEM_PMU is not set
-# CONFIG_MARVELL_PEM_PMU is not set
 # end of Performance monitor support
 
 CONFIG_RAS=y
@@ -8298,45 +8302,45 @@ CONFIG_INTERCONNECT=y
 CONFIG_INTERCONNECT_QCOM=y
 CONFIG_INTERCONNECT_QCOM_BCM_VOTER=y
 # CONFIG_INTERCONNECT_QCOM_MSM8909 is not set
-# CONFIG_INTERCONNECT_QCOM_MSM8916 is not set
+CONFIG_INTERCONNECT_QCOM_MSM8916=m
 # CONFIG_INTERCONNECT_QCOM_MSM8937 is not set
 # CONFIG_INTERCONNECT_QCOM_MSM8939 is not set
 # CONFIG_INTERCONNECT_QCOM_MSM8953 is not set
 # CONFIG_INTERCONNECT_QCOM_MSM8974 is not set
 # CONFIG_INTERCONNECT_QCOM_MSM8976 is not set
-# CONFIG_INTERCONNECT_QCOM_MSM8996 is not set
+CONFIG_INTERCONNECT_QCOM_MSM8996=y
 CONFIG_INTERCONNECT_QCOM_OSM_L3=m
-# CONFIG_INTERCONNECT_QCOM_QCM2290 is not set
+CONFIG_INTERCONNECT_QCOM_QCM2290=y
 CONFIG_INTERCONNECT_QCOM_QCS404=m
-# CONFIG_INTERCONNECT_QCOM_QCS615 is not set
-# CONFIG_INTERCONNECT_QCOM_QCS8300 is not set
-# CONFIG_INTERCONNECT_QCOM_QDU1000 is not set
+CONFIG_INTERCONNECT_QCOM_QCS615=y
+CONFIG_INTERCONNECT_QCOM_QCS8300=y
+CONFIG_INTERCONNECT_QCOM_QDU1000=y
 CONFIG_INTERCONNECT_QCOM_RPMH_POSSIBLE=y
 CONFIG_INTERCONNECT_QCOM_RPMH=y
-# CONFIG_INTERCONNECT_QCOM_SA8775P is not set
+CONFIG_INTERCONNECT_QCOM_SA8775P=y
 # CONFIG_INTERCONNECT_QCOM_SAR2130P is not set
-# CONFIG_INTERCONNECT_QCOM_SC7180 is not set
-# CONFIG_INTERCONNECT_QCOM_SC7280 is not set
-# CONFIG_INTERCONNECT_QCOM_SC8180X is not set
-# CONFIG_INTERCONNECT_QCOM_SC8280XP is not set
+CONFIG_INTERCONNECT_QCOM_SC7180=y
+CONFIG_INTERCONNECT_QCOM_SC7280=y
+CONFIG_INTERCONNECT_QCOM_SC8180X=y
+CONFIG_INTERCONNECT_QCOM_SC8280XP=y
 # CONFIG_INTERCONNECT_QCOM_SDM660 is not set
 # CONFIG_INTERCONNECT_QCOM_SDM670 is not set
-# CONFIG_INTERCONNECT_QCOM_SDM845 is not set
+CONFIG_INTERCONNECT_QCOM_SDM845=y
 # CONFIG_INTERCONNECT_QCOM_SDX55 is not set
 # CONFIG_INTERCONNECT_QCOM_SDX65 is not set
-# CONFIG_INTERCONNECT_QCOM_SDX75 is not set
-# CONFIG_INTERCONNECT_QCOM_SM6115 is not set
+CONFIG_INTERCONNECT_QCOM_SDX75=y
+CONFIG_INTERCONNECT_QCOM_SM6115=y
 # CONFIG_INTERCONNECT_QCOM_SM6350 is not set
 # CONFIG_INTERCONNECT_QCOM_SM7150 is not set
 CONFIG_INTERCONNECT_QCOM_SM8150=y
 CONFIG_INTERCONNECT_QCOM_SM8250=y
 CONFIG_INTERCONNECT_QCOM_SM8350=y
 CONFIG_INTERCONNECT_QCOM_SM8450=y
-# CONFIG_INTERCONNECT_QCOM_SM8550 is not set
-# CONFIG_INTERCONNECT_QCOM_SM8650 is not set
-# CONFIG_INTERCONNECT_QCOM_SM8750 is not set
-# CONFIG_INTERCONNECT_QCOM_X1E80100 is not set
-CONFIG_INTERCONNECT_QCOM_SMD_RPM=m
+CONFIG_INTERCONNECT_QCOM_SM8550=y
+CONFIG_INTERCONNECT_QCOM_SM8650=y
+CONFIG_INTERCONNECT_QCOM_SM8750=y
+CONFIG_INTERCONNECT_QCOM_X1E80100=y
+CONFIG_INTERCONNECT_QCOM_SMD_RPM=y
 CONFIG_INTERCONNECT_CLK=y
 CONFIG_COUNTER=m
 # CONFIG_INTERRUPT_CNT is not set
@@ -8897,9 +8901,7 @@ CONFIG_CRYPTO_HW=y
 # CONFIG_CRYPTO_DEV_ATMEL_ECC is not set
 # CONFIG_CRYPTO_DEV_ATMEL_SHA204A is not set
 # CONFIG_CRYPTO_DEV_CCP is not set
-# CONFIG_CAVIUM_CPT is not set
 # CONFIG_CRYPTO_DEV_NITROX_CNN55XX is not set
-# CONFIG_CRYPTO_DEV_OCTEONTX_CPT is not set
 # CONFIG_CRYPTO_DEV_QAT_DH895xCC is not set
 # CONFIG_CRYPTO_DEV_QAT_C3XXX is not set
 # CONFIG_CRYPTO_DEV_QAT_C62X is not set
@@ -9232,6 +9234,7 @@ CONFIG_DEBUG_MEMORY_INIT=y
 # CONFIG_MEM_ALLOC_PROFILING is not set
 CONFIG_HAVE_ARCH_KASAN=y
 CONFIG_HAVE_ARCH_KASAN_SW_TAGS=y
+CONFIG_HAVE_ARCH_KASAN_HW_TAGS=y
 CONFIG_HAVE_ARCH_KASAN_VMALLOC=y
 CONFIG_CC_HAS_KASAN_GENERIC=y
 CONFIG_CC_HAS_KASAN_SW_TAGS=y
