--- a/arch/arm64/boot/dts/qcom/sm8450-samsung-r0q.dts
+++ b/arch/arm64/boot/dts/qcom/sm8450-samsung-r0q.dts
@@ -2,6 +2,8 @@
 
 /dts-v1/;
 
+#include <dt-bindings/input/linux-event-codes.h>
+#include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/regulator/qcom,rpmh-regulator.h>
 
 #include "sm8450.dtsi"
@@ -12,79 +14,129 @@
 #include "pmk8350.dtsi"
 #include "pmr735a.dtsi"
 
-/ {
-    chassis-type = "handset";
-    model = "Samsung Galaxy S22";
-    compatible = "samsung,r0q", "qcom,sm8450";
+/delete-node/ &xbl_ramdump_mem;
+/delete-node/ &xbl_sc_mem;
+/delete-node/ &adsp_mem;
+/delete-node/ &rmtfs_mem;
+/delete-node/ &mte_mem;
+/delete-node/ &trusted_apps_mem;
+/delete-node/ &trusted_apps_ext_mem;
 
-    chosen {
-        #address-cells = <2>;
-        #size-cells = <2>;
-        ranges;
+& {
+	chassis-type = "handset";
+	model = "Samsung Galaxy S22 5G (SM-S901E)";
+	compatible = "samsung,r0q", "qcom,sm8450";
 
-        bootargs = "earlycon clk_ignore_unused pd_ignore_unused console=tty0";
-        stdout-path = "serial0:115200n8";
-    
-        framebuffer: framebuffer@b8000000 {
-            compatible = "simple-framebuffer";
-            reg = <0x0 0xb8000000 0x0 0x2b00000>;
-            width = <1080>;
-            height = <2340>;
-            stride = <(1080 * 4)>;
-            format = "a8r8g8b8";
-            status = "okay";
-        };
-    };
+	chosen {
+		#address-cells = <2>;
+		#size-cells = <2>;
+		ranges;
 
-    gpio-keys {
-    	compatible = "gpio-keys";
-    	pinctrl-0 = <&volume_up_n>;
-    	pinctrl-names = "default";
-    
-    	key-volume-up {
-    		label = "Volume Up";
-    		linux,code = <KEY_VOLUMEUP>;
-    		gpios = <&pm8450_gpios 6 GPIO_ACTIVE_LOW>;
-    		debounce-interval = <15>;
-    		linux,can-disable;
-    		wakeup-source;
-    	};
-    };
+		bootargs = "clk_ignore_unused pd_ignore_unused";
+		linux,initrd-start = <0x00 0xb6915000>;
+		linux,initrd-end   = <0x00 0xb7fff22c>;
+		stdout-path = "serial0:115200n8";
 
-    memory {
-    	ddr_device_type = <0x08>;
-    	device_type = "memory";
-    	reg = <0x00 0x80000000 0x00 0x6a000000 0x00 0xf1c00000 0x00 0xe400000 0x08 0x00 0x00 0x3ab00000 0x08 0x40000000 0x01 0x40000000 0x08 0x3b100000 0x00 0x1e00000>;
-    };
+		framebuffer: framebuffer@b8000000 {
+			compatible = "simple-framebuffer";
+			reg = <0x0 0xb8000000 0x0 0x2b00000>;
+			width = <1080>;
+			height = <2340>;
+			stride = <(1080 * 4)>;
+			format = "a8r8g8b8";
+		};
+	};
 
-    reserved-memory {
+	gpio-keys {
+		compatible = "gpio-keys";
+		autorepeat;
+
+		pinctrl-0 = <&vol_up_n>;
+		pinctrl-names = "default";
+
+		key-vol-up {
+			label = "Volume Up";
+			linux,code = <KEY_VOLUMEUP>;
+			gpios = <&pm8350_gpios 6 GPIO_ACTIVE_LOW>;
+			debounce-interval = <15>;
+		};
+	};
+
+	memory {
+		ddr_device_type = <0x08>;
+		device_type = "memory";
+		reg = <0x00 0x80000000 0x00 0x6a000000
+		       0x00 0xf1c00000 0x00 0xe400000
+		       0x08 0x00       0x00 0x3ab00000
+		       0x08 0x40000000 0x01 0x40000000
+		       0x08 0x3b100000 0x00 0x1e00000>;
+	};
+
+	reserved-memory {
+		xbl_ramdump_mem: memory@a6b80000 {
+			reg = <0x0 0xa7d00000 0x0 0x300000>;
+			no-map;
+		};
+
+		xbl_sc_mem: memory@a6e00000 {
+			reg = <0x0 0xa6e00000 0x0 0x40000>;
+			no-map;
+		};
+
+		adsp_mem: memory@9fd00000 {
+			reg = <0x0 0x84500000 0x0 0x3b00000>;
+			no-map;
+		};
+
+		rmtfs_mem: memory@fe200000 {
+			compatible = "qcom,rmtfs-mem";
+			reg = <0x0 0xfe200000 0x0 0x280000>;
+			reg-names = "rmtfs";
+			qcom,client-id = <1>;
+			no-map;
+			qcom,vmid = <QCOM_SCM_VMID_MSS_MSA>;
+		};
+
 		splash_region@b8000000 {
 			reg = <0x0 0xb8000000 0x0 0x2b00000>;
 			no-map;
 		};
-    };
+	};
 
-    battery: battery {
-        compatible = "simple-battery";
-        charge-full-design-microamp-hours = <4520000>;
-        energy-full-design-microwatt-hours = <17500000>;
-        voltage-min-design-microvolt = <3400000>;
-        voltage-max-design-microvolt = <4460000>;
-    };
+	battery: battery {
+		compatible = "simple-battery";
+		charge-full-design-microamp-hours = <4520000>;
+		energy-full-design-microwatt-hours = <17500000>;
+		voltage-min-design-microvolt = <3400000>;
+		voltage-max-design-microvolt = <4460000>;
+	};
 
-    vph_pwr: vph-pwr-regulator {
-    	compatible = "regulator-fixed";
-    	regulator-name = "vph_pwr";
-    	regulator-min-microvolt = <3700000>;
-    	regulator-max-microvolt = <3700000>;
-    
-    	regulator-always-on;
-    	regulator-boot-on;
-    };
+	vph_pwr: vph-pwr-regulator {
+		compatible = "regulator-fixed";
+		regulator-name = "vph_pwr";
+		regulator-min-microvolt = <3700000>;
+		regulator-max-microvolt = <3700000>;
+		regulator-always-on;
+		regulator-boot-on;
+	};
 };
 
 &tlmm {
-    gpio-reserved-ranges = <10 15>;
+	gpio-reserved-ranges = <36 4>, <50 1>, <93 1>;
+
+	dsi_default: dsi-default-state {
+		pins = "gpio6";
+		function = "gpio";
+		drive-strength = <8>;
+		bias-disable;
+	};
+
+	dsi_suspend: dsi-suspend-state {
+		pins = "gpio6";
+		function = "gpio";
+		drive-strength = <2>;
+		bias-pull-down;
+	};
 };
 
 &apps_rsc {
@@ -105,79 +157,61 @@
 		vdd-s11-supply = <&vph_pwr>;
 		vdd-s12-supply = <&vph_pwr>;
 
-		vdd-l1-l4-supply = <&pm8350_s11>;
+		vdd-l1-l4-supply = <&vreg_s11b_0p95>;
 		vdd-l2-l7-supply = <&vreg_bob>;
-		vdd-l3-l5-supply = <&pm8350_s11>;
-		vdd-l6-l9-l10-supply = <&pm8350_s12>;
+		vdd-l3-l5-supply = <&vreg_bob>;
+		vdd-l6-l9-l10-supply = <&vreg_s12b_1p25>;
+		vdd-l8-supply = <&vreg_s2h_0p95>;
 
-		/*
-		 * ARC regulators:
-		 * s5 - gfx.lvl
-		 * l8 - lcx.lvl
-		 */
-
-		pm8350_s10: smps10 {
-			regulator-name = "pm8350_s10";
-			regulator-min-microvolt = <1800000>;
-			regulator-max-microvolt = <1800000>;
-		};
-
-		pm8350_s11: smps11 {
-			regulator-name = "pm8350_s11";
+		vreg_s11b_0p95: smps11 {
+			regulator-name = "vreg_s11b_0p95";
 			regulator-min-microvolt = <848000>;
 			regulator-max-microvolt = <1104000>;
 		};
 
-		pm8350_s12: smps12 {
-			regulator-name = "pm8350_s12";
+		vreg_s12b_1p25: smps12 {
+			regulator-name = "vreg_s12b_1p25";
 			regulator-min-microvolt = <1224000>;
 			regulator-max-microvolt = <1400000>;
 		};
 
-		pm8350_l1: ldo1 {
-			regulator-name = "pm8350_l1";
+		vreg_l1b_0p91: ldo1 {
+			regulator-name = "vreg_l1b_0p91";
 			regulator-min-microvolt = <912000>;
 			regulator-max-microvolt = <920000>;
 			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
 		};
-
-		pm8350_l2: ldo2 {
-			regulator-name = "pm8350_l2";
+		
+		vreg_l2b_3p07: ldo2 {
+			regulator-name = "vreg_l2b_3p07";
 			regulator-min-microvolt = <3072000>;
 			regulator-max-microvolt = <3072000>;
 			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
 		};
 
-		pm8350_l3: ldo3 {
-			regulator-name = "pm8350_l3";
-			regulator-min-microvolt = <904000>;
-			regulator-max-microvolt = <904000>;
-			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
-		};
-
-		pm8350_l5: ldo5 {
-			regulator-name = "pm8350_l5";
+		vreg_l5b_0p88: ldo5 {
+			regulator-name = "vreg_l5b_0p88";
 			regulator-min-microvolt = <880000>;
-			regulator-max-microvolt = <912000>;
+			regulator-max-microvolt = <888000>;
 			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
 		};
 
-		pm8350_l6: ldo6 {
-			regulator-name = "pm8350_l6";
+		vreg_l6b_1p2: ldo6 {
+			regulator-name = "vreg_l6b_1p2";
 			regulator-min-microvolt = <1200000>;
 			regulator-max-microvolt = <1200000>;
 			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
 		};
 
-		pm8350_l7: ldo7 {
-			regulator-name = "pm8350_l7";
+		vreg_l7b_2p5: ldo7 {
+			regulator-name = "vreg_l7b_2p5";
 			regulator-min-microvolt = <2504000>;
 			regulator-max-microvolt = <2504000>;
 			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
 		};
 
-		pm8350_l9: ldo9 {
-			regulator-name = "pm8350_l9";
+		vreg_l9b_1p2: ldo9 {
+			regulator-name = "vreg_l9b_1p2";
 			regulator-min-microvolt = <1200000>;
 			regulator-max-microvolt = <1200000>;
 			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
@@ -199,130 +233,30 @@
 		vdd-s9-supply = <&vph_pwr>;
 		vdd-s10-supply = <&vph_pwr>;
 
-		vdd-l1-l12-supply = <&pm8350c_s1>;
-		vdd-l2-l8-supply = <&pm8350c_s1>;
+		vdd-l1-l12-supply = <&vreg_bob>;
+		vdd-l2-l8-supply = <&vreg_bob>;
 		vdd-l3-l4-l5-l7-l13-supply = <&vreg_bob>;
 		vdd-l6-l9-l11-supply = <&vreg_bob>;
-		vdd-l10-supply = <&pm8350_s12>;
 
 		vdd-bob-supply = <&vph_pwr>;
 
-		/*
-		 * ARC regulators:
-		 * s2 - mxc.lvl
-		 * s4 - mss.lvl
-		 * s6 - cx.lvl
-		 */
-
-		pm8350c_s1: smps1 {
-			regulator-name = "pm8350c_s1";
+		vreg_s1c_1p86: smps1 {
+			regulator-name = "vreg_s1c_1p86";
 			regulator-min-microvolt = <1800000>;
 			regulator-max-microvolt = <2024000>;
 		};
 
-		pm8350c_s10: smps10 {
-			regulator-name = "pm8350c_s10";
-			regulator-min-microvolt = <1000000>;
-			regulator-max-microvolt = <1100000>;
-		};
-
 		vreg_bob: bob {
 			regulator-name = "vreg_bob";
-			regulator-min-microvolt = <3080000>;
+			regulator-min-microvolt = <3008000>;
 			regulator-max-microvolt = <3960000>;
 			regulator-initial-mode = <RPMH_REGULATOR_MODE_AUTO>;
 		};
 
-		pm8350c_l1: ldo1 {
-			regulator-name = "pm8350c_l1";
+		vreg_l1c_1p8: ldo1 {
+			regulator-name = "vreg_l1c_1p8";
 			regulator-min-microvolt = <1800000>;
 			regulator-max-microvolt = <1800000>;
-			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
-		};
-
-		pm8350c_l2: ldo2 {
-			regulator-name = "pm8350c_l2";
-			regulator-min-microvolt = <1800000>;
-			regulator-max-microvolt = <1800000>;
-			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
-		};
-
-		pm8350c_l3: ldo3 {
-			regulator-name = "pm8350c_l3";
-			regulator-min-microvolt = <3296000>;
-			regulator-max-microvolt = <3304000>;
-			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
-		};
-
-		pm8350c_l4: ldo4 {
-			regulator-name = "pm8350c_l4";
-			regulator-min-microvolt = <1704000>;
-			regulator-max-microvolt = <3000000>;
-			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
-		};
-
-		pm8350c_l5: ldo5 {
-			regulator-name = "pm8350c_l5";
-			regulator-min-microvolt = <1704000>;
-			regulator-max-microvolt = <3000000>;
-			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
-		};
-
-		pm8350c_l6: ldo6 {
-			regulator-name = "pm8350c_l6";
-			regulator-min-microvolt = <1800000>;
-			/* Originally max = 3008000 but SDHCI expects 2960000 */
-			regulator-max-microvolt = <2960000>;
-			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
-		};
-
-		pm8350c_l7: ldo7 {
-			regulator-name = "pm8350c_l7";
-			regulator-min-microvolt = <3008000>;
-			regulator-max-microvolt = <3304000>;
-			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
-		};
-
-		pm8350c_l8: ldo8 {
-			regulator-name = "pm8350c_l8";
-			regulator-min-microvolt = <1800000>;
-			regulator-max-microvolt = <1800000>;
-			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
-		};
-
-		pm8350c_l9: ldo9 {
-			regulator-name = "pm8350c_l9";
-			regulator-min-microvolt = <2960000>;
-			/* Originally max = 3008000 but SDHCI expects 2960000 */
-			regulator-max-microvolt = <2960000>;
-			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
-		};
-
-		pm8350c_l10: ldo10 {
-			regulator-name = "pm8350c_l10";
-			regulator-min-microvolt = <1200000>;
-			regulator-max-microvolt = <1220000>;
-			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
-		};
-
-		pm8350c_l11: ldo11 {
-			regulator-name = "pm8350c_l11";
-			regulator-min-microvolt = <3200000>;
-			regulator-max-microvolt = <3200000>;
-			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
-		};
-
-		pm8350c_l12: ldo12 {
-			regulator-name = "pm8350c_l12";
-			regulator-min-microvolt = <1800000>;
-			regulator-max-microvolt = <1968000>;
-			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
-		};
-
-		pm8350c_l13: ldo13 {
-			regulator-name = "pm8350c_l13";
-			regulator-min-microvolt = <3000000>;
-			regulator-max-microvolt = <3000000>;
 			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
 		};
 	};
@@ -342,32 +276,10 @@
 		vdd-l3-supply = <&vreg_bob>;
 		vdd-l4-supply = <&vreg_bob>;
 
-		/*
-		 * ARC regulators:
-		 * S2 - ebi.lvl
-		 * S4 - mmcx.lvl
-		 * S6 - mx.lvl
-		 * L1 - lmx.lvl
-		 */
-
-		pm8450_s3: smps3 {
-			regulator-name = "pm8450_s3";
-			regulator-min-microvolt = <500000>;
-			regulator-max-microvolt = <600000>;
-		};
-
-		pm8450_l2: ldo2 {
-			regulator-name = "pm8450_l2";
-			regulator-min-microvolt = <880000>;
-			regulator-max-microvolt = <912000>;
-			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
-		};
-
-		pm8450_l3: ldo3 {
-			regulator-name = "pm8450_l3";
-			regulator-min-microvolt = <912000>;
-			regulator-max-microvolt = <912000>;
-			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
+		vreg_s2h_0p95: smps2 {
+			regulator-name = "vreg_s2h_0p95";
+			regulator-min-microvolt = <848000>;
+			regulator-max-microvolt = <1104000>;
 		};
 	};
 
@@ -379,80 +291,36 @@
 		vdd-s2-supply = <&vph_pwr>;
 		vdd-s3-supply = <&vph_pwr>;
 
-		vdd-l1-l2-supply = <&pmr735a_s2>;
-		vdd-l3-supply = <&pmr735a_s1>;
-		vdd-l4-supply = <&pm8350c_s1>;
-		vdd-l5-l6-supply = <&pm8350c_s1>;
+		vdd-l1-l2-supply = <&vreg_s2e_0p85>;
+		vdd-l3-supply = <&vreg_s1e_1p25>;
+		vdd-l4-supply = <&vreg_s1c_1p86>;
+		vdd-l5-l6-supply = <&vreg_s1c_1p86>;
 		vdd-l7-bob-supply = <&vreg_bob>;
 
-		pmr735a_s1: smps1 {
-			regulator-name = "pmr735a_s1";
+		vreg_s1e_1p25: smps1 {
+			regulator-name = "vreg_s1e_1p25";
 			regulator-min-microvolt = <1200000>;
 			regulator-max-microvolt = <1296000>;
 		};
 
-		pmr735a_s2: smps2 {
-			regulator-name = "pmr735a_s2";
+		vreg_s2e_0p85: smps2 {
+			regulator-name = "vreg_s2e_0p85";
 			regulator-min-microvolt = <500000>;
 			regulator-max-microvolt = <1040000>;
-		};
-
-		pmr735a_s3: smps3 {
-			regulator-name = "pmr735a_s3";
-			regulator-min-microvolt = <435000>;
-			regulator-max-microvolt = <2352000>;
-		};
-
-		pmr735a_l1: ldo1 {
-			regulator-name = "pmr735a_l1";
-			regulator-min-microvolt = <800000>;
-			regulator-max-microvolt = <800000>;
-		};
-
-		pmr735a_l2: ldo2 {
-			regulator-name = "pmr735a_l2";
-			regulator-min-microvolt = <480000>;
-			regulator-max-microvolt = <912000>;
-		};
-
-		pmr735a_l3: ldo3 {
-			regulator-name = "pmr735a_l3";
-			regulator-min-microvolt = <1200000>;
-			regulator-max-microvolt = <1200000>;
-		};
-
-		pmr735a_l4: ldo4 {
-			regulator-name = "pmr735a_l4";
-			regulator-min-microvolt = <1776000>;
-			regulator-max-microvolt = <1776000>;
-		};
-
-		pmr735a_l5: ldo5 {
-			regulator-name = "pmr735a_l5";
-			regulator-min-microvolt = <880000>;
-			regulator-max-microvolt = <880000>;
-		};
-
-		pmr735a_l6: ldo6 {
-			regulator-name = "pmr735a_l6";
-			regulator-min-microvolt = <1200000>;
-			regulator-max-microvolt = <1200000>;
-		};
-
-		pmr735a_l7: ldo7 {
-			regulator-name = "pmr735a_l7";
-			regulator-min-microvolt = <2800000>;
-			regulator-max-microvolt = <2800000>;
 		};
 	};
 };
 
-&pm8450_gpios {
-	volume_up_n: volume-up-n-state {
+&i2c5 {
+	clock-frequency = <100000>;
+	status = "okay";
+};
+
+&pm8350_gpios {
+	vol_up_n: vol-up-n-state {
 		pins = "gpio6";
 		function = "normal";
 		power-source = <1>;
-		bias-pull-up;
 		input-enable;
 	};
 };
@@ -467,20 +335,19 @@
 };
 
 &ufs_mem_hc {
-	status = "okay";
-
 	reset-gpios = <&tlmm 210 GPIO_ACTIVE_LOW>;
-
-	vcc-supply = <&pm8350_l7>;
+	vcc-supply = <&vreg_l7b_2p5>;
 	vcc-max-microamp = <1100000>;
-	vccq-supply = <&pm8350_l9>;
+	vccq-supply = <&vreg_l9b_1p2>;
 	vccq-max-microamp = <1200000>;
-	vdd-hba-supply = <&pm8350_l9>;
+	vccq2-supply = <&vreg_l9b_1p2>;
+	vccq2-max-microamp = <1200000>;
+	vdd-hba-supply = <&vreg_l9b_1p2>;
+	status = "okay";
 };
 
 &ufs_mem_phy {
 	status = "okay";
-
-	vdda-phy-supply = <&pm8350_l5>;
-	vdda-pll-supply = <&pm8350_l6>;
+	vdda-phy-supply = <&vreg_l5b_0p88>;
+	vdda-pll-supply = <&vreg_l6b_1p2>;
 };
