--- a/arch/arm64/boot/dts/qcom/sm8450-samsung-r0q.dts
+++ b/arch/arm64/boot/dts/qcom/sm8450-samsung-r0q.dts
@@ -1,4 +1,5 @@
 // SPDX-License-Identifier: GPL-2.0-only
+// SPDX-License-Identifier: GPL-2.0-only
 
 /dts-v1/;
 
@@ -23,100 +24,92 @@
 /delete-node/ &trusted_apps_ext_mem;
 
 / {
-    chassis-type = "handset";
-    model = "Samsung Galaxy S22";
-    compatible = "samsung,r0q", "qcom,sm8450";
+	chassis-type = "handset";
+	model = "Samsung Galaxy S22 (SM-S901E)";
+	compatible = "samsung,r0q", "qcom,sm8450";
 
-    chosen {
-        #address-cells = <2>;
-        #size-cells = <2>;
-        ranges;
+	chosen {
+		#address-cells = <2>;
+        	#size-cells = <2>;
+        	ranges;
 
-        bootargs = "PMOS_NOSPLASH clk_ignore_unused pd_ignore_unused";
-		linux,initrd-start = <0x00 0xb6915000>;
-		linux,initrd-end = <0x00 0xb7fff22c>;
-        stdout-path = "serial0:115200n8";
-    
-        framebuffer: framebuffer@b8000000 {
-            compatible = "simple-framebuffer";
-            reg = <0x0 0xb8000000 0x0 0x2b00000>;
-            width = <1080>;
-            height = <2340>;
-            stride = <(1080 * 4)>;
-            format = "a8r8g8b8";
-        };
-    };
+        	bootargs = "PMOS_NOSPLASH clk_ignore_unused pd_ignore_unused";
+        	linux,initrd-start = <0x00 0xb6915000>;
+        	linux,initrd-end = <0x00 0xb7fff22c>;
+        	stdout-path = "serial0:115200n8";
 
-    gpio-keys {
-    	compatible = "gpio-keys";
-    	autorepeat;
-    	
-    	pinctrl-0 = <&vol_up_n>;
-    	pinctrl-names = "default";
-    
-    	key-vol-up {
-    		label = "Volume Up";
-    		linux,code = <KEY_VOLUMEUP>;
-    		gpios = <&pm8350_gpios 6 GPIO_ACTIVE_LOW>;
-    		debounce-interval = <15>;
+        	framebuffer: framebuffer@b8000000 {
+         	   compatible = "simple-framebuffer";
+         	   reg = <0x0 0xb8000000 0x0 0x2b00000>;
+         	   width = <1080>;
+         	   height = <2340>;
+         	   stride = <(1080 * 4)>;
+         	   format = "a8r8g8b8";
+        	};
     	};
-    };
 
-    memory {
-    	ddr_device_type = <0x08>;
-    	device_type = "memory";
-    	reg = <0x00 0x80000000 0x00 0x6a000000 0x00 0xf1c00000 0x00 0xe400000 0x08 0x00 0x00 0x3ab00000 0x08 0x40000000 0x01 0x40000000 0x08 0x3b100000 0x00 0x1e00000>;
-    };
+    	gpio-keys {
+        	compatible = "gpio-keys";
+        	autorepeat;
 
-    reserved-memory {
-		xbl_ramdump_mem: memory@a6b80000 {
-			reg = <0x0 0xa7d00000 0x0 0x300000>;
-			no-map;
-		};
+        	pinctrl-0 = <&vol_up_n>;
+        	pinctrl-names = "default";
 
-		xbl_sc_mem: memory@a6e00000 {
-			reg = <0x0 0xa6e00000 0x0 0x40000>;
-			no-map;
-		};
+        	key-vol-up {
+            		label = "Volume Up";
+            		linux,code = <KEY_VOLUMEUP>;
+            		gpios = <&pm8350_gpios 6 GPIO_ACTIVE_LOW>;
+            		debounce-interval = <15>;
+        	};
+    	};
 
-		adsp_mem: memory@9fd00000 {
-			reg = <0x0 0x84500000 0x0 0x3b00000>;
-			no-map;
-		};
+    	memory {
+    		ddr_device_type = <0x08>;
+    		device_type = "memory";
+		reg = <0x00 0x80000000 0x00 0x6a000000 0x00 0xf1c00000 0x00 0xe400000 0x08 0x00 0x00 0x3ab00000 0x08 0x40000000 0x01 0x40000000 0x08 0x3b100000 0x00 0x1e00000>;
+    	};
 
-		rmtfs_mem: memory@fe200000 {
-			compatible = "qcom,rmtfs-mem";
-			reg = <0x0 0xfe200000 0x0 0x280000>;
-			reg-names = "rmtfs";
-			qcom,client-id = <1>;
-			no-map;
+    	reserved-memory {
+        	xbl_ramdump_mem: memory@a6b80000 {
+            		reg = <0x0 0xa7d00000 0x0 0x300000>;
+            		no-map;
+        	};
 
-			qcom,vmid = <QCOM_SCM_VMID_MSS_MSA>;
-		};
-		
-		splash_region@b8000000 {
-			reg = <0x0 0xb8000000 0x0 0x2b00000>;
-			no-map;
-		};
-    };
+        	xbl_sc_mem: memory@a6e00000 {
+            		reg = <0x0 0xa6e00000 0x0 0x40000>;
+            		no-map;
+        	};
 
-    battery: battery {
-        compatible = "simple-battery";
-        charge-full-design-microamp-hours = <4520000>;
-        energy-full-design-microwatt-hours = <17500000>;
-        voltage-min-design-microvolt = <3400000>;
-        voltage-max-design-microvolt = <4460000>;
-    };
+        	adsp_mem: memory@9fd00000 {
+            		reg = <0x0 0x84500000 0x0 0x3b00000>;
+            		no-map;
+        	};
 
-    vph_pwr: vph-pwr-regulator {
-    	compatible = "regulator-fixed";
-    	regulator-name = "vph_pwr";
-    	regulator-min-microvolt = <3700000>;
-    	regulator-max-microvolt = <3700000>;
-    
-    	regulator-always-on;
-    	regulator-boot-on;
-    };
+        	rmtfs_mem: memory@fe200000 {
+            		compatible = "qcom,rmtfs-mem";
+            		reg = <0x0 0xfe200000 0x0 0x280000>;
+            		reg-names = "rmtfs";
+            		qcom,client-id = <1>;
+            		no-map;
+
+            		qcom,vmid = <QCOM_SCM_VMID_MSS_MSA>;
+        	};
+
+        	splash_region@b8000000 {
+            		reg = <0x0 0xb8000000 0x0 0x2b00000>;
+            		no-map;
+        	};
+    	};
+
+    	vph_pwr: vph-pwr-regulator {
+        	compatible = "regulator-fixed";
+        	regulator-name = "vph_pwr";
+        	regulator-min-microvolt = <3700000>;
+        	regulator-max-microvolt = <3700000>;
+
+        	regulator-always-on;
+        	regulator-boot-on;
+    	};
 };
 
 &tlmm {
@@ -126,15 +119,15 @@
 		pins = "gpio6";
 		function = "gpio";
 		drive-strength = <8>;
-    		bias-disable;
-    	};
+		bias-disable;
+	};
     
-    	dsi_suspend: dsi-suspend-state {
-    		pins = "gpio6";
-    		function = "gpio";
-    		drive-strength = <2>;
-    		bias-pull-down;
-    	};
+	dsi_suspend: dsi-suspend-state {
+		pins = "gpio6";
+		function = "gpio";
+		drive-strength = <2>;
+		bias-pull-down;
+	};
 };
 
 &apps_rsc {
@@ -334,7 +327,8 @@
 
 &usb_1_dwc3 {
 	dr_mode = "peripheral";
-
+	maximum-speed = "high-speed";
+    
 	phys = <&usb_1_hsphy>;
 	phy-names = "usb2-phy";
 };
@@ -363,6 +357,6 @@
 &ufs_mem_phy {
 	status = "okay";
 
-    	vdda-phy-supply = <&vreg_l5b_0p88>;
-    	vdda-pll-supply = <&vreg_l6b_1p2>;
+	vdda-phy-supply = <&vreg_l5b_0p88>;
+	vdda-pll-supply = <&vreg_l6b_1p2>;
 };
